# SandboxBridge

./: content.js  manifest.json  pyproject.toml  sandbox-bridge.js  sandbox.html
src/sandbox_bridge/: __init__.py  main.py
src/sandbox_bridge/extension/: background.js  content.js  sandbox-bridge.js
